--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,10 +12,9 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-
-        android:layout_marginStart="111dp"
-        android:layout_marginLeft="111dp"
-        android:layout_marginTop="77dp"
+        android:layout_marginStart="112dp"
+        android:layout_marginLeft="112dp"
+        android:layout_marginTop="52dp"
         android:gravity="center_horizontal|center_vertical"
         android:text="SONORITY BY AUDIENTES"
         android:textAppearance="@style/sonority_by" />
@@ -27,7 +26,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_marginLeft="144dp"
-        android:layout_marginTop="115dp"
+        android:layout_marginTop="96dp"
         android:gravity="center_horizontal|center_vertical"
         android:text="HOME"
         android:textAppearance="@style/home" />
@@ -38,13 +37,14 @@
         android:layout_height="152dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginLeft="128dp"
-        android:layout_marginTop="198dp"
+        android:layout_marginLeft="129dp"
+        android:layout_marginTop="161dp"
         android:background="@xml/home_ellipse"
         android:elevation="50dp"
         android:gravity="center_horizontal|center_vertical"
         android:text="SOUND  TIMBRE"
         android:textAppearance="@style/sonic_distr" />
+
 
     <Button
         android:id="@+id/home_button2"
@@ -52,14 +52,13 @@
         android:layout_height="152dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginLeft="128dp"
-        android:layout_marginTop="396dp"
+        android:layout_marginLeft="129dp"
+        android:layout_marginTop="376dp"
         android:background="@xml/home_ellipse"
         android:elevation="50dp"
         android:gravity="center_horizontal|center_vertical"
         android:text="SONIC DISTRACTION"
         android:textAppearance="@style/sonic_distr" />
-
 
     <Button
         android:id="@+id/home_rectangle1"
@@ -67,19 +66,20 @@
         android:layout_height="40dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginLeft="73dp"
-        android:layout_marginTop="601dp"
+        android:layout_marginLeft="63dp"
+        android:layout_marginTop="605dp"
         android:background="@xml/home_rectangle" />
 
     <View
         android:id="@+id/home_rectangle1_settings"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginLeft="91dp"
-        android:layout_marginTop="605dp"
-        android:background="@drawable/ic_baseline_settings_24" />
+        android:layout_marginLeft="79dp"
+        android:layout_marginTop="606dp"
+        android:background="@drawable/ic_baseline_settings_24"
+        android:elevation="3dp" />
 
     <Button
         android:id="@+id/home_rectangle2"
@@ -87,8 +87,8 @@
         android:layout_height="40dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginLeft="173dp"
-        android:layout_marginTop="601dp"
+        android:layout_marginLeft="172dp"
+        android:layout_marginTop="605dp"
         android:background="@xml/home_rectangle" />
 
     <Button
@@ -97,8 +97,8 @@
         android:layout_height="40dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginLeft="271dp"
-        android:layout_marginTop="602dp"
+        android:layout_marginLeft="280dp"
+        android:layout_marginTop="605dp"
         android:background="@xml/home_rectangle" />
 
 
