--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/frontpage"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
@@ -14,10 +15,12 @@
         android:layout_alignParentTop="true"
         android:layout_marginStart="112dp"
         android:layout_marginLeft="112dp"
-        android:layout_marginTop="52dp"
+        android:layout_marginTop="37dp"
+        android:fontFamily="sans-serif-medium"
         android:gravity="center_horizontal|center_vertical"
         android:text="SONORITY BY AUDIENTES"
-        android:textAppearance="@style/sonority_by" />
+        android:textAppearance="@style/sonority_by"
+        android:textStyle="bold"/>
 
     <TextView
         android:id="@+id/home"
@@ -26,10 +29,25 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_marginLeft="144dp"
-        android:layout_marginTop="96dp"
+        android:layout_marginTop="74dp"
+        android:fontFamily="sans-serif-medium"
         android:gravity="center_horizontal|center_vertical"
         android:text="HOME"
-        android:textAppearance="@style/home" />
+        android:textAppearance="@style/home"
+        android:textStyle="bold"/>
+
+
+    <Button
+        android:id="@+id/some_id"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="351dp"
+        android:layout_marginTop="15dp"
+        android:gravity="center_horizontal|center_vertical"
+        android:text="@string/some_id"
+        android:textAppearance="@style/some_id" />
 
     <Button
         android:id="@+id/home_button1"
@@ -37,14 +55,15 @@
         android:layout_height="152dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginLeft="129dp"
-        android:layout_marginTop="161dp"
+        android:layout_marginLeft="128dp"
+        android:layout_marginTop="145dp"
         android:background="@xml/home_ellipse"
         android:elevation="50dp"
+        android:fontFamily="sans-serif-medium"
         android:gravity="center_horizontal|center_vertical"
-        android:text="SOUND  TIMBRE"
+        android:text="SOUND &amp; TIMBRE"
+        android:textStyle="bold"
         android:textAppearance="@style/sonic_distr" />
-
 
     <Button
         android:id="@+id/home_button2"
@@ -53,53 +72,76 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_marginLeft="129dp"
-        android:layout_marginTop="376dp"
+        android:layout_marginTop="357dp"
         android:background="@xml/home_ellipse"
         android:elevation="50dp"
+        android:fontFamily="sans-serif-medium"
         android:gravity="center_horizontal|center_vertical"
         android:text="SONIC DISTRACTION"
-        android:textAppearance="@style/sonic_distr" />
+        android:textAppearance="@style/sonic_distr"
+        android:textStyle="bold" />
 
     <Button
-        android:id="@+id/home_rectangle1"
-        android:layout_width="66dp"
-        android:layout_height="40dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="63dp"
-        android:layout_marginTop="605dp"
-        android:background="@xml/home_rectangle" />
+            android:id="@+id/home_rectangle1"
+            android:layout_width="66dp"
+            android:layout_height="40dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginLeft="63dp"
+            android:layout_marginTop="605dp"
+            android:background="@xml/home_rectangle" />
 
     <View
         android:id="@+id/home_rectangle1_settings"
+        android:layout_width="130dp"
+        android:layout_height="130dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="37dp"
+        android:layout_marginTop="558dp"
+        android:background="@drawable/settings_icon"
+        android:elevation="3dp" />
+
+    <Button
+            android:id="@+id/home_rectangle2"
+            android:layout_width="66dp"
+            android:layout_height="40dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginLeft="172dp"
+            android:layout_marginTop="605dp"
+            android:background="@xml/home_rectangle" />
+    <View
+        android:id="@+id/home_sound_settings"
         android:layout_width="35dp"
         android:layout_height="35dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginLeft="79dp"
+        android:layout_marginLeft="189dp"
         android:layout_marginTop="606dp"
-        android:background="@drawable/ic_baseline_settings_24"
+        android:background="@drawable/sound_icon"
         android:elevation="3dp" />
 
-    <Button
-        android:id="@+id/home_rectangle2"
-        android:layout_width="66dp"
-        android:layout_height="40dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="172dp"
-        android:layout_marginTop="605dp"
-        android:background="@xml/home_rectangle" />
+        <Button
+            android:id="@+id/home_rectangle3"
+            android:layout_width="66dp"
+            android:layout_height="40dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginLeft="280dp"
+            android:layout_marginTop="605dp"
+            android:background="@xml/home_rectangle" />
 
-    <Button
-        android:id="@+id/home_rectangle3"
-        android:layout_width="66dp"
-        android:layout_height="40dp"
+    <View
+        android:id="@+id/home_sound_test"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginLeft="280dp"
-        android:layout_marginTop="605dp"
-        android:background="@xml/home_rectangle" />
+        android:layout_marginLeft="292dp"
+        android:layout_marginTop="599dp"
+        android:background="@drawable/graph_icon"
+        android:elevation="3dp" />
 
 
 </RelativeLayout>
