--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -289,5 +289,11 @@
 
     </style>
 
+    <style name="SeekBarTheme" parent="Widget.AppCompat.SeekBar">
+        <item name="colorAccent">
+            #1B325F
+        </item>
+    </style>
+
 
 </resources>
