--- a/app/src/main/res/layout/activity_music_player.xml
+++ b/app/src/main/res/layout/activity_music_player.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/frontpage"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
@@ -20,7 +19,7 @@
         android:gravity="center_horizontal|center_vertical"
         android:text="SONORITY BY AUDIENTES"
         android:textAppearance="@style/sonority_by"
-        android:textStyle="bold"/>
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/player"
@@ -34,7 +33,7 @@
         android:gravity="center_horizontal|center_vertical"
         android:text="PLAYER"
         android:textAppearance="@style/home"
-        android:textStyle="bold"/>
+        android:textStyle="bold" />
 
     <Button
         android:id="@+id/component_8"
@@ -45,8 +44,7 @@
         android:layout_marginLeft="352dp"
         android:layout_marginTop="15dp"
         android:background="@drawable/home_house_4"
-        android:elevation="5dp"
-        />
+        android:elevation="5dp" />
 
     <Button
         android:id="@+id/component_1"
@@ -60,8 +58,8 @@
         android:elevation="50dp"
         android:text="SLEEP MODE"
         android:textAppearance="@style/sleepmode"
-        android:textStyle="bold"
-        android:textSize="12sp"/>
+        android:textSize="12sp"
+        android:textStyle="bold" />
 
 
     <View
@@ -202,20 +200,33 @@
         android:layout_height="40dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginLeft="63dp"
-        android:layout_marginTop="605dp"
+        android:layout_marginLeft="40dp"
+        android:layout_marginTop="595dp"
         android:background="@xml/home_rectangle" />
 
     <View
         android:id="@+id/home_rectangle1_settings"
-        android:layout_width="130dp"
+        android:layout_width="135dp"
         android:layout_height="130dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginLeft="37dp"
-        android:layout_marginTop="558dp"
+        android:layout_marginLeft="13dp"
+        android:layout_marginTop="535dp"
         android:background="@drawable/settings_icon"
         android:elevation="3dp" />
+
+    <TextView
+        android:layout_width="80dp"
+        android:layout_height="20dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="635dp"
+        android:layout_marginEnd="220dp"
+        android:fontFamily="sans-serif-medium"
+        android:gravity="bottom|center"
+        android:text="SETTINGS"
+        android:textAppearance="@style/sonic_distr2"
+        android:textSize="13sp"
+        android:textStyle="bold" />
 
     <Button
         android:id="@+id/home_rectangle2"
@@ -223,9 +234,23 @@
         android:layout_height="40dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginLeft="172dp"
-        android:layout_marginTop="605dp"
+        android:layout_marginLeft="170dp"
+        android:layout_marginTop="595dp"
         android:background="@xml/home_rectangle" />
+
+    <TextView
+        android:layout_width="80dp"
+        android:layout_height="20dp"
+        android:layout_marginStart="162dp"
+        android:layout_marginTop="635dp"
+        android:layout_marginEnd="350dp"
+        android:fontFamily="sans-serif-medium"
+        android:gravity="bottom|center"
+        android:text="PLAYER"
+        android:textAppearance="@style/sonic_distr2"
+        android:textSize="13sp"
+        android:textStyle="bold" />
+
     <View
         android:id="@+id/home_sound_settings"
         android:layout_width="35dp"
@@ -233,7 +258,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_marginLeft="189dp"
-        android:layout_marginTop="606dp"
+        android:layout_marginTop="596dp"
         android:background="@drawable/sound_icon"
         android:elevation="3dp" />
 
@@ -243,8 +268,8 @@
         android:layout_height="40dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginLeft="280dp"
-        android:layout_marginTop="605dp"
+        android:layout_marginLeft="300dp"
+        android:layout_marginTop="595dp"
         android:background="@xml/home_rectangle" />
 
     <View
@@ -253,55 +278,59 @@
         android:layout_height="45dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginLeft="292dp"
-        android:layout_marginTop="599dp"
+        android:layout_marginLeft="310dp"
+        android:layout_marginTop="590dp"
         android:background="@drawable/graph_icon"
         android:elevation="3dp" />
+
+    <TextView
+        android:layout_width="80dp"
+        android:layout_height="20dp"
+        android:layout_marginStart="292dp"
+        android:layout_marginTop="635dp"
+        android:layout_marginEnd="480dp"
+        android:fontFamily="sans-serif-medium"
+        android:gravity="bottom|center"
+        android:text="AUDIOGRAM"
+        android:textAppearance="@style/sonic_distr2"
+        android:textSize="13sp"
+        android:textStyle="bold" />
 
     <SeekBar
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="80dp"
-        android:layout_marginEnd="80dp"
         android:layout_marginTop="550dp"
-        android:theme="@style/SeekBarTheme"
+        android:layout_marginEnd="80dp"
+        android:progress="30"
         android:progressBackgroundTint="@color/colorPrimary"
-        android:progress="30">
-    </SeekBar>
+        android:theme="@style/SeekBarTheme"></SeekBar>
 
     <TextView
         android:layout_width="80dp"
         android:layout_height="30dp"
         android:layout_marginStart="167dp"
-        android:layout_marginEnd="167dp"
         android:layout_marginTop="518dp"
+        android:layout_marginEnd="167dp"
+        android:fontFamily="sans-serif-medium"
+        android:gravity="bottom|center"
         android:text="LYDNAVN"
         android:textAppearance="@style/sonic_distr2"
         android:textSize="12sp"
-        android:fontFamily="sans-serif-medium"
-        android:textStyle="bold"
-        android:gravity="bottom|center">
-         </TextView>
+        android:textStyle="bold"></TextView>
 
     <TextView
         android:layout_width="80dp"
         android:layout_height="30dp"
         android:layout_marginStart="167dp"
-        android:layout_marginEnd="167dp"
         android:layout_marginTop="568dp"
+        android:layout_marginEnd="167dp"
+        android:fontFamily="sans-serif-medium"
+        android:gravity="top|center"
         android:text="MODE"
         android:textAppearance="@style/sonic_distr2"
         android:textSize="12sp"
-        android:fontFamily="sans-serif-medium"
-        android:textStyle="bold"
-        android:gravity="top|center">>
-    </TextView>
-
-
-
-
-
-
+        android:textStyle="bold" />
 
 
 </RelativeLayout>
