--- a/app/src/main/res/layout/activity_music_player.xml
+++ b/app/src/main/res/layout/activity_music_player.xml
@@ -304,7 +304,9 @@
         android:layout_marginEnd="80dp"
         android:progress="30"
         android:progressBackgroundTint="@color/colorPrimary"
-        android:theme="@style/SeekBarTheme"></SeekBar>
+        android:theme="@style/SeekBarTheme">
+
+    </SeekBar>
 
     <TextView
         android:layout_width="80dp"
@@ -317,7 +319,9 @@
         android:text="LYDNAVN"
         android:textAppearance="@style/sonic_distr2"
         android:textSize="12sp"
-        android:textStyle="bold"></TextView>
+        android:textStyle="bold">
+
+    </TextView>
 
     <TextView
         android:layout_width="80dp"
