--- a/app/src/main/res/layout/screenslide.xml
+++ b/app/src/main/res/layout/screenslide.xml
@@ -6,26 +6,40 @@
     android:layout_height="match_parent"
     tools:context="com.example.brintaudientes.MainActivity">
 
-    
-    <com.google.android.material.tabs.TabLayout
-        android:id="@+id/tada"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-         android:layout_marginTop="580dp"
-        android:background="@color/colorPrimary"
-        android:elevation="6dp"
-        android:minHeight="?attr/actionBarSize">
-
-    </com.google.android.material.tabs.TabLayout>
-    
-    
-
-    <androidx.viewpager.widget.ViewPager
+    <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/viewpager3"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginBottom="633dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-    </RelativeLayout>
+        app:layout_constraintTop_toTopOf="parent" >
+
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tabdida"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginTop="548dp"
+        android:layout_marginBottom="135dp">
+
+        <com.google.android.material.tabs.TabItem
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Monday" />
+
+        <com.google.android.material.tabs.TabItem
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Tuesday" />
+
+        <com.google.android.material.tabs.TabItem
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Wednesday" />
+    </com.google.android.material.tabs.TabLayout>
+
+</androidx.viewpager2.widget.ViewPager2>
+
+</RelativeLayout>
