--- a/app/src/main/res/layout/fragment_audiogram2.xml
+++ b/app/src/main/res/layout/fragment_audiogram2.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/audiogram"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@xml/audiogram_background">
+    android:background="@xml/audiogram_background"
+    tools:context=".AudiogramFragment">
 
     <TextView
         android:id="@+id/sonority_by"
@@ -30,10 +31,10 @@
         android:layout_alignParentTop="true"
         android:layout_marginLeft="101dp"
         android:layout_marginTop="74dp"
+        android:fontFamily="sans-serif-medium"
         android:gravity="center_horizontal|center_vertical"
         android:text="AUDIOGRAM"
         android:textAppearance="@style/sonic_distr2"
-        android:fontFamily="sans-serif-medium"
         android:textStyle="bold"/>
 
     <Button
@@ -61,8 +62,8 @@
         android:fontFamily="sans-serif-medium"
         android:text="TAKE HEARING TEST"
         android:textAppearance="@style/sonic_distr2"
-        android:textStyle="bold"
-        android:textSize="16sp"/>
+        android:textSize="16sp"
+        android:textStyle="bold"/>
 
     <Button
         android:id="@+id/audiogram_rectangle_3"
@@ -74,11 +75,11 @@
         android:layout_marginTop="310dp"
         android:background="@xml/audiogram_rectangle"
         android:elevation="4dp"
+        android:fontFamily="sans-serif-medium"
         android:text="UPLOAD AUDIOGRAM"
         android:textAppearance="@style/sonic_distr2"
-        android:fontFamily="sans-serif-medium"
-        android:textStyle="bold"
-        android:textSize="16sp"/>
+        android:textSize="16sp"
+        android:textStyle="bold"/>
 
     <Button
         android:id="@+id/audiogram_rectangle_2"
@@ -90,12 +91,12 @@
         android:layout_marginTop="420dp"
         android:background="@xml/audiogram_rectangle"
         android:elevation="4dp"
+        android:fontFamily="sans-serif-medium"
         android:text="VIEW MY AUDIOGRAM"
         android:textAppearance="@style/sonic_distr2"
-        android:fontFamily="sans-serif-medium"
-        android:textStyle="bold"
-        android:textSize="16sp"/>
+        android:textSize="16sp"
+        android:textStyle="bold"/>
 
 
 
-</RelativeLayout>
+</FrameLayout>
