--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,20 +12,22 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="0dp"
         android:layout_marginEnd="0dp"
-        android:layout_marginBottom="0dp"
+        android:layout_marginBottom="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:elevation="5dp"
-        android:tabStripEnabled = "false"
+        app:tabIndicatorColor="#F26C4F"
+        app:tabIndicatorHeight="5dp"
         app:tabIndicatorGravity="bottom"
         app:tabTextAppearance="@style/sonority_by2">
 
         <com.google.android.material.tabs.TabItem
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:icon="@drawable/"
-            android:text="PLAY MODE"/>
+            android:icon="@drawable/ic_settings_tab"
+            android:text="PLAY MODE"
+            />
 
         <com.google.android.material.tabs.TabItem
             android:layout_width="wrap_content"
