--- a/app/src/main/res/layout/fragment_audiogram2.xml
+++ b/app/src/main/res/layout/fragment_audiogram2.xml
@@ -4,11 +4,11 @@
     android:id="@+id/audiogram"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@xml/audiogram_background"
+    android:background="@xml/frontpage_background_2"
     tools:context=".AudiogramFragment">
 
     <TextView
-        android:id="@+id/sonority_by"
+        android:id="@+id/sonority_by_audientes"
         android:layout_width="187dp"
         android:layout_height="17dp"
         android:layout_alignParentStart="true"
@@ -20,34 +20,21 @@
         android:fontFamily="sans-serif-medium"
         android:gravity="center_horizontal|center_vertical"
         android:text="SONORITY BY AUDIENTES"
-        android:textAppearance="@style/sonority_by2"
+        android:textAppearance="@style/sonority_by"
         android:textStyle="bold"/>
+
 
     <TextView
-        android:id="@+id/audiogram_header"
-        android:layout_width="209dp"
-        android:layout_height="38dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="101dp"
-        android:layout_marginTop="74dp"
+        android:id="@+id/settings_header"
+        android:layout_width="wrap_content"
+        android:layout_height="34dp"
+        android:layout_marginStart="130dp"
+        android:layout_marginTop="90dp"
         android:fontFamily="sans-serif-medium"
-        android:gravity="center_horizontal|center_vertical"
+        android:gravity="center_horizontal"
         android:text="AUDIOGRAM"
-        android:textAppearance="@style/sonic_distr2"
-        android:textStyle="bold"/>
-
-    <Button
-        android:id="@+id/component_8"
-        android:layout_width="40dp"
-        android:layout_height="35dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="352dp"
-        android:layout_marginTop="15dp"
-        android:background="@drawable/home_house_3"
-        android:elevation="5dp"
-        />
+        android:textAppearance="@style/home"
+        android:textStyle="bold" />
 
     <Button
         android:id="@+id/audiogram_rectangle_1"
