--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -4,11 +4,10 @@
     android:id="@+id/preset_quick"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@xml/quickstart_background"
-    tools:context=".SettingsFragment">
+    android:background="@xml/frontpage_background_2">
 
     <TextView
-        android:id="@+id/sonority_by2"
+        android:id="@+id/sonority_by_audientes"
         android:layout_width="187dp"
         android:layout_height="17dp"
         android:layout_alignParentStart="true"
@@ -20,143 +19,45 @@
         android:fontFamily="sans-serif-medium"
         android:gravity="center_horizontal|center_vertical"
         android:text="SONORITY BY AUDIENTES"
-        android:textAppearance="@style/sonority_by2"
+        android:textAppearance="@style/sonority_by"
         android:textStyle="bold"/>
 
     <TextView
-        android:id="@+id/sonic_distr2"
-        android:layout_width="209dp"
-        android:layout_height="38dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="105dp"
-        android:layout_marginTop="74dp"
+        android:id="@+id/settings_header"
+        android:layout_width="130dp"
+        android:layout_height="34dp"
+        android:layout_marginStart="140dp"
+        android:layout_marginTop="90dp"
         android:fontFamily="sans-serif-medium"
         android:gravity="center_horizontal|center_vertical"
-        android:text="SONIC DISTRACTION"
-        android:textAppearance="@style/sonic_distr2"
-        android:textStyle="bold"/>
-
-
-    <Button
-        android:id="@+id/rectangle_1"
-        android:layout_width="258dp"
-        android:layout_height="57dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="80dp"
-        android:layout_marginTop="198dp"
-        android:background="@xml/quickstart_bars"
-        android:elevation="3dp"
-        android:fontFamily="sans-serif-medium"
-        android:text="SLEEP"
-        android:textAppearance="@style/sleep"
-        android:textStyle="bold"/>
-
-
-    <Button
-        android:id="@+id/rectangle_2"
-        android:layout_width="258dp"
-        android:layout_height="57dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="76dp"
-        android:layout_marginTop="332dp"
-        android:background="@xml/quickstart_bars"
-        android:elevation="3dp"
-        android:fontFamily="sans-serif-medium"
-        android:text="AMBIENCE"
-        android:textAppearance="@style/ambience"
-        android:textStyle="bold"/>
-
-    <Button
-        android:id="@+id/rectangle_3"
-        android:layout_width="258dp"
-        android:layout_height="57dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="79dp"
-        android:layout_marginTop="466dp"
-        android:background="@xml/quickstart_bars"
-        android:elevation="3dp"
-        android:fontFamily="sans-serif-medium"
-        android:text="NOISE DISTRACTION"
-        android:textAppearance="@style/ambience"
-        android:textStyle="bold"/>
-
-
-    <Button
-        android:id="@+id/home_rectangle1"
-        android:layout_width="66dp"
-        android:layout_height="40dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="65dp"
-        android:layout_marginTop="605dp"
-        android:background="@xml/home_rectangle" />
+        android:text="SETTINGS"
+        android:textAppearance="@style/home"
+        android:textStyle="bold" />
 
     <View
-        android:id="@+id/home_rectangle1_settings"
-        android:layout_width="130dp"
-        android:layout_height="130dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="37dp"
-        android:layout_marginTop="558dp"
-        android:background="@drawable/settings_icon"
-        android:elevation="3dp" />
+        android:layout_width="280dp"
+        android:layout_height="224dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="180dp"
+        android:background="@drawable/sound_balance_polygon"
+        android:elevation="4dp" />
 
     <Button
-        android:id="@+id/home_rectangle2"
-        android:layout_width="66dp"
-        android:layout_height="40dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="172dp"
-        android:layout_marginTop="605dp"
-        android:background="@xml/home_rectangle" />
-
-    <View
-        android:id="@+id/home_sound_settings"
-        android:layout_width="35dp"
-        android:layout_height="35dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="189dp"
-        android:layout_marginTop="606dp"
-        android:background="@drawable/sound_icon"
-        android:elevation="3dp" />
+        android:layout_width="55dp"
+        android:layout_height="55dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="280dp"
+        android:background="@drawable/grey_ellipse"/>
 
     <Button
-        android:id="@+id/home_rectangle3"
-        android:layout_width="66dp"
-        android:layout_height="40dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="280dp"
-        android:layout_marginTop="605dp"
-        android:background="@xml/home_rectangle" />
-
-    <View
-        android:id="@+id/home_sound_test"
-        android:layout_width="45dp"
-        android:layout_height="45dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="292dp"
-        android:layout_marginTop="599dp"
-        android:background="@drawable/graph_icon"
-        android:elevation="3dp" />
-
-    <Button
-        android:id="@+id/component_8"
-        android:layout_width="40dp"
-        android:layout_height="35dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="352dp"
-        android:layout_marginTop="15dp"
-        android:background="@drawable/home_house"
-        android:elevation="5dp"/>
-
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="445dp"
+        android:background="@xml/reset_ellipse_test"
+        android:fontFamily="sans-serif-medium"
+        android:text="RESET"
+        android:textAppearance="@style/sonority_by2"
+        android:textStyle="bold"/>
 </FrameLayout>
+
