--- a/app/src/main/res/layout/fragment_play.xml
+++ b/app/src/main/res/layout/fragment_play.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/frontpage"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:background="@xml/frontpage_background_2">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:background="@xml/frontpage_background_2"
+    tools:context=".PlayFragment">
 
     <TextView
         android:id="@+id/sonority_by"
@@ -40,17 +42,11 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="189dp"
-        android:background="@xml/rectangle_mode" />
-    
-    <View
-        android:id="@+id/view_mode_button"
-        android:layout_width="260dp"
-        android:layout_height="73.35dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="189dp"
-        android:background="@drawable/ic_group_10"
-        android:elevation="4dp"/>
-
+        android:background="@xml/rectangle_mode"
+        android:text="SELECT PRESET"
+        android:textAppearance="@style/sonority_by2"
+        android:textSize="16sp"
+        android:textStyle="bold"/>
     <Button
         android:layout_width="25dp"
         android:layout_height="25dp"
@@ -143,3 +139,4 @@
 
 
 </FrameLayout>
+
