--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -299,5 +299,37 @@
         </item>
     </style>
 
+    <style name="Play_ambience">
+
+        <item name="android:textSize">
+            14sp
+        </item>
+
+        <item name="android:letterSpacing">
+            0.04
+        </item>
+
+        <item name="android:textColor">
+            #1B325F
+        </item>
+
+        <item name="android:shadowColor">
+            #40000000
+        </item>
+
+        <item name="android:shadowDx">
+            0
+        </item>
+
+        <item name="android:shadowDy">
+            0
+        </item>
+
+        <item name="android:shadowRadius">
+            2
+        </item>
+
+    </style>
+
 
 </resources>
